--- a/practice/index.html
+++ b/practice/index.html
@@ -13,6 +13,7 @@
     <footer>
         <p>Hey look, its a picture of me</p>
         <p>Cool</p>
+        <p>I can make websites now. What should I make? Idk.</p>
     </footer>
 </body>
 </html>
